# EBCF-Epistemic-Boundary-Consistency-Framework

./: .gitignore  Example.md  README.md  ebcf_cli.py  ebcf_gui.py  public_cli.py  pyproject.toml  run.py
adapter/: base.py  logistic_system.py  medical_system.py  ml_system.py  toy_system.py
ai/: proposer.py
core/: consistency.py  controller.py  identifiability.py
ebcf/: __init__.py  api.py  cli.py
ebcf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ebcf/adapter/: example_adapter.py
ebcf/core/: boundary.py  controller.py  identifiability.py  state.py  veto.py
ebcf/flows/: chest_pain.py
ebcf/reporting/: boundary_graph.py  reporting_text.py  uncertainty_plot.py
ebcf/utils/: logger.py
examples/: run_ai_vs_ebcf.py  run_medical.py  run_ml.py
examples/medical/: chest_pain_flow.json
reporting/: reporting_text.py
