[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ebcf"
version = "1.0.0"
description = "Epistemic Boundary & Consistency Framework"
readme = "README.md"
requires-python = ">=3.9"

authors = [
  { name = "Anshul" }
]

license = { text = "Private" }

dependencies = []

[tool.setuptools.packages.find]
where = ["."]
