[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ebcf"
version = "0.1.0"
description = "Epistemic Boundary & Consistency Framework — a Python library to decide when answering a question is epistemically justified."
readme = "README.md"
requires-python = ">=3.9"

authors = [
  { name = "Abhi Chaudhary", email = "abhisejwal51@gmail.com" }
]

license = { text = "MIT" }

dependencies = []

[project.urls]
Homepage = "https://github.com/Abhichaudhary2077/EBCF-Epistemic-Boundary-Consistency-Framework"
Repository = "https://github.com/Abhichaudhary2077/EBCF-Epistemic-Boundary-Consistency-Framework"
Documentation = "https://github.com/Abhichaudhary2077/EBCF-Epistemic-Boundary-Consistency-Framework#readme"
